objects/Test_Drive__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_Guest_For_Ride__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Guest For Ride</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Type__c</field>
                <operation>equals</operation>
                <value>Test Ride Guest</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Guest Rides (Assigned Guest For Ride)</relationshipLabel>
        <relationshipName>Guest_Rides</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Ride_Driver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Ride Driver</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Type__c</field>
                <operation>equals</operation>
                <value>Test Ride Driver</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Test Drives</relationshipLabel>
        <relationshipName>Test_AssignedDrives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_s_request__c</fullName>
        <description>Complete request message by customer</description>
        <label>Customer&apos;s request</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Time_slot__c</fullName>
        <label>Time slot</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Assigned__c</fullName>
        <label>Vehicle Assigned</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Test Drive</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Assigned_Guest_For_Ride__c</columns>
        <columns>Assigned_Ride_Driver__c</columns>
        <columns>Time_slot__c</columns>
        <columns>Vehicle_Assigned__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TD-{0000}</displayFormat>
        <label>Test Drive</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Drives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>